# FickerEngine

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  README_AUTOMATION.md  dev.sh  main.cpp
.github/: CODEOWNERS
.github/workflows/: agent-debug.yml  agent.yml  build-web.yml  decision-log.yml  docs-check.yml  pages-deploy.yml  visual-ci.yml
_backup/render_old/: IRenderer.h  RenderMesh.cpp  WebGPUContext.h
docs/: ARCH_NOTES.md  DECISIONS.md  FOLDER_STRUCTURE.md  PHYSICS.md  PHYSICS_PROXIES.md  ROADMAP.md  SESSION_LOG.md  WORLD_TOPOLOGY.md
engine/core/: Engine.cpp  Engine.h  Input.cpp  Input.h  Time.cpp  Time.h
engine/game/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
engine/game/physics/: ColliderProxy.h  PhysicsWorld.cpp  PhysicsWorld.h  PhysicsWorldPBD.cpp  PhysicsWorldPBD.h  PhysicsWorldRB.cpp  PhysicsWorldRB.h  ProxyGen.cpp  ProxyGen.h  RigidBody.h  RigidBody3D.h  RigidClusterBody.cpp  RigidClusterBody.h
engine/game/world/: WorldMesh.cpp  WorldMesh.h
engine/geom/: ColoredBox.h  ColoredQuad.h  GridPlane.cpp  GridPlane.h  MarkerCross.cpp  MarkerCross.h  TerrainGrid.h
engine/graphics/: DebugGrid.cpp  DebugGrid.h
engine/math/: MiniMath.h
engine/render/: RenderMesh.cpp  RenderMesh.h  WebGPUContext.cpp  WebGPUContext.h  WebGPURenderer.cpp
runtime/: main.cpp  web_main.cpp
scripts/agent/: repo_agent.py
scripts/ci/: capture.js
web/: index.html  shell.html
